Time: 57 ms (5.06%), Space: 54.9 MB (73.47%) - LeetHub